[gd_scene load_steps=19 format=2]

[ext_resource path="res://Player/Red Mage Walking 2/walk 4.png" type="Texture" id=1]
[ext_resource path="res://Player/Red Mage Walking/walk 4.png" type="Texture" id=2]
[ext_resource path="res://Player/Red Mage Walking/walk 2.png" type="Texture" id=3]
[ext_resource path="res://Player/Idle.png" type="Texture" id=4]
[ext_resource path="res://Player/Red Mage.png" type="Texture" id=5]
[ext_resource path="res://User Interface/PixelFont.tres" type="Theme" id=6]
[ext_resource path="res://Player/Red Mage Walking 2/walk 2.png" type="Texture" id=7]
[ext_resource path="res://Player/Jump Damage.png" type="Texture" id=8]
[ext_resource path="res://Player/Red Mage Jump/Jump 1.png" type="Texture" id=9]
[ext_resource path="res://Player/Red Mage Jump/Jump 2.png" type="Texture" id=10]
[ext_resource path="res://Player/Damage.png" type="Texture" id=11]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=12]
[ext_resource path="res://Audio/sfx_lose.ogg" type="AudioStream" id=13]
[ext_resource path="res://Audio/click1.ogg" type="AudioStream" id=14]
[ext_resource path="res://Audio/Damage.wav" type="AudioStream" id=15]
[ext_resource path="res://Audio/Jump.wav" type="AudioStream" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 5 ) ],
"loop": true,
"name": "Damage",
"speed": 20.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "Walk",
"speed": 15.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "JumpDamage",
"speed": 20.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 16 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 12 )

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="GameOver" type="Control" parent="UI"]
pause_mode = 2
visible = false
modulate = Color( 0, 1, 0.345098, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="UI/GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOver/CenterContainer"]
margin_left = 254.0
margin_top = 142.0
margin_right = 366.0
margin_bottom = 198.0

[node name="Label" type="Label" parent="UI/GameOver/CenterContainer/VBoxContainer"]
margin_right = 112.0
margin_bottom = 12.0
text = "Game Over"
align = 1

[node name="Retry" type="Button" parent="UI/GameOver/CenterContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 112.0
margin_bottom = 34.0
text = "Retry Level"

[node name="Return" type="Button" parent="UI/GameOver/CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 112.0
margin_bottom = 56.0
text = "Return to Main Menu"

[node name="Time" type="Control" parent="UI"]
modulate = Color( 0, 0.764706, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimebarText" type="CenterContainer" parent="UI/Time"]
margin_top = -32.0
margin_right = 176.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Time/TimebarText"]
margin_left = 67.0
margin_top = 34.0
margin_right = 109.0
margin_bottom = 46.0
text = "Time bar"

[node name="ProgressBar" type="ProgressBar" parent="UI/Time"]
modulate = Color( 0, 1, 1, 1 )
margin_left = 16.0
margin_top = 16.0
margin_right = 160.0
margin_bottom = 32.0
max_value = 30.0
value = 30.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
bus = "Lower"

[node name="LoseSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 13 )

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="PositionRight" type="Position2D" parent="."]
position = Vector2( 25, 0 )

[node name="PositionLeft" type="Position2D" parent="."]
position = Vector2( -25, 0 )

[node name="InvincibleTime" type="Timer" parent="."]

[node name="GameTime" type="Timer" parent="."]

[node name="GameOverTime" type="Timer" parent="."]
[connection signal="pressed" from="UI/GameOver/CenterContainer/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="UI/GameOver/CenterContainer/VBoxContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="timeout" from="InvincibleTime" to="." method="_on_InvincibleTime_timeout"]
[connection signal="timeout" from="GameTime" to="." method="_on_GameTime_timeout"]
[connection signal="timeout" from="GameOverTime" to="." method="_on_GameOverTime_timeout"]
